# Agent-Learning

LongChainAgent/: main.py  pyproject.toml
LongChainAgent/files/: LangChainIntro.txt
LongChainAgent/src/agent/: conversation_summary_memory_agent.py  human_assistence_agent.py  simple_agent.py  tool_agent.py
LongChainAgent/src/examples/: chat_agent_with_short_and_long_term_context.py  hello_world.py  run_lang_graph_agent.py  run_rag_example.py  run_system_prompt.py  run_tool_example.py
LongChainAgent/src/examples/agent/: run_conversation_summary_agent.py  run_human_assistence_agent.py  run_simple_agent.py  run_time_travel_agent.py  run_tool_agent.py
LongChainAgent/src/memory/: conversation_memory.py
LongChainAgent/src/tools/simple/: human_assistance.py
SmolAgent/: .env.template  main.py  pyproject.toml  tool.py
SmolAgent/src/tools/: web_search.py  (+1 more)
SmolAgent/test/: receipts.db  run_local_store.py  run_web_search.py
YomiChat/: .gitignore  Readme.md
YomiChat/backend/: .env.template  README.md  agent_wrapper.py  agent_wrapper_legacy.py  main.py  pyproject.toml  requirements.txt  run_agent.py  test_ansi_cleaning.py
YomiChat/backend/agents/: __init__.py  agent_factory.py  chat_agent.py
YomiChat/backend/config/: __init__.py  settings.py
YomiChat/backend/loaders/: PdfLoader.py
YomiChat/backend/streaming/: __init__.py  output_interceptor.py  stream_manager.py  text_formatter.py
YomiChat/backend/tests/: run_document_loaders.py
YomiChat/backend/tools/: __init__.py  retrieve_docs.py  web_search.py
YomiChat/frontend/: package-lock.json  package.json
(+7 files in other folders)
